# nebius-llm-architectures-hw4

./: .gitignore  CHANGELOG.md  README.md  notebook-audit-report.md  notebook-results-auditor.agent.md  pyproject.toml
docs/architecture/: bonus-frameworks.md  cifar10-workflows.md  index.md  notebook-progress.md  rnn-language-model.md
src/: CIFAR10.ipynb  RNN_LM_homework.ipynb  Week 4 hometask bonus, backward.ipynb  Week 4 hometask bonus, forward.ipynb  bon_p1_backward.ipynb  bon_p2_forward.ipynb  homework_CIFAR10.ipynb  notebook_progress.py  p1_task_1_4_frog_ship_bin.ipynb  p1_task_1_5_cat_dog_bin.ipynb  p1_task_3_CNN.ipynb  p1_task_3_MCC.ipynb  p2_RNN_LM.ipynb
