[project]
name = "nebius-hw4"
version = "0.1.0"
description = "Standalone HW4 notebook project for Nebius AI Performance Engineering"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "certifi>=2024.0",
    "gdown>=6.0.0",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "jupyterlab>=4.2",
    "matplotlib>=3.8",
    "nbformat>=5.10",
    "notebook>=7.2",
    "numpy>=2.0",
    "pandas>=2.2",
    "pillow>=10.0",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "torch>=2.4",
    "torchvision>=0.19",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "nbconvert>=7.16",
    "pytest>=8.0",
]

[tool.uv]
package = false
